tests/machine/x/pl/if_else.out
ERROR: /workspace/mochi/tests/machine/x/pl/if_else.pl:8:7: Syntax error: Operator expected

